force-app/main/default/objects/Global_Charges__c/fields/ACH__c.field-meta.xml
<CustomField>
    <fullName>ACH__c</fullName>
    <label>+ ACH</label>
    <length>5</length>
    <type>Text</type>
</CustomField>