force-app/main/default/objects/Global_Charges__c/fields/ACNO__c.field-meta.xml
<CustomField>
    <fullName>ACNO__c</fullName>
    <label>ACNO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>