force-app/main/default/objects/Global_Charges__c/fields/Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Charge_ID__c</fullName>
    <label>Charge ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>