force-app/main/default/objects/Global_Charges__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Interest Rcvd</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Refund Head</fullName>
            </value>
            <value>
                <fullName>Brokerage Expense</fullName>
            </value>
            <value>
                <fullName>Cancellation Charges</fullName>
            </value>
            <value>
                <fullName>Interest Payable</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Power Backup</fullName>
            </value>
            <value>
                <fullName>Car Parking</fullName>
            </value>
            <value>
                <fullName>PLC</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Cheque Dishonor</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>MVAT</fullName>
            </value>
            <value>
                <fullName>Stamp Duty</fullName>
            </value>
            <value>
                <fullName>Legal Charges</fullName>
            </value>
            <value>
                <fullName>Society Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>