force-app/main/default/objects/Global_Charges__c/fields/Master_Config__c.field-meta.xml
<CustomField>
    <fullName>Master_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master_Config</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Global Charges</relationshipLabel>
    <relationshipName>Global_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>