force-app/main/default/objects/Global_Charges__c/fields/Nature_of_Charge__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Charge__c</fullName>
    <label>Nature of Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Debtors</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>