force-app/main/default/objects/Global_Charges__c/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <label>+ PC</label>
    <length>3</length>
    <type>Text</type>
</CustomField>