force-app/main/default/objects/Global_Charges__c/fields/Posting_to_FA_system__c.field-meta.xml
<CustomField>
    <fullName>Posting_to_FA_system__c</fullName>
    <label>Posting to FA system</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLC</fullName>
            </value>
            <value>
                <fullName>ACNO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>