force-app/main/default/objects/Global_Charges__c/fields/SAP_condition_type__c.field-meta.xml
<CustomField>
    <fullName>SAP_condition_type__c</fullName>
    <label>SAP condition type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>