force-app/main/default/objects/Global_Charges__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <length>8</length>
    <type>Text</type>
</CustomField>