force-app/main/default/objects/Global_Charges__c/validationRules/Length_Code_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_Code_Count</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Code__c) !=3</errorConditionFormula>
    <errorDisplayField>Code__c</errorDisplayField>
    <errorMessage>Global Charge Code must be three digit.</errorMessage>
</ValidationRule>