force-app/main/default/objects/Global_Charges__c/validationRules/Posting_To_Fa_System_ACNO.validationRule-meta.xml
<ValidationRule>
    <fullName>Posting_To_Fa_System_ACNO</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;CLC&apos;) , NOT(  ISBLANK(  ACNO__c  )    ) )</errorConditionFormula>
    <errorDisplayField>ACNO__c</errorDisplayField>
    <errorMessage>After Selecting CLC  Pick Value,You cannn&apos;t enter in ACNO</errorMessage>
</ValidationRule>