force-app/main/default/objects/Global_Charges__c/validationRules/Posting_To_Fa_System_CLC.validationRule-meta.xml
<ValidationRule>
    <fullName>Posting_To_Fa_System_CLC</fullName>
    <active>true</active>
    <description>When User Select ACNO of PickList and Enter data in +PC</description>
    <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;ACNO&apos;) , NOT( ISBLANK(  PC__c  ) ) )</errorConditionFormula>
    <errorDisplayField>PC__c</errorDisplayField>
    <errorMessage>After Selecting ACNO Pick Value,You cannn&apos;t enter in  +PC</errorMessage>
</ValidationRule>