force-app/main/default/objects/Global_Charges__c/validationRules/Posting_To_Fa_System_CLC_ACNO.validationRule-meta.xml
<ValidationRule>
    <fullName>Posting_To_Fa_System_CLC_ACNO</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;ACNO&apos;) , NOT( ISBLANK(  ACH__c  ) ) )</errorConditionFormula>
    <errorDisplayField>ACH__c</errorDisplayField>
    <errorMessage>After Selecting ACNO Pick Value,You cannn&apos;t enter in +ACH</errorMessage>
</ValidationRule>