force-app/main/default/objects/Global_Charges__c/validationRules/Tax_Charge_must_be_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Charge_must_be_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Charge_Type__c, &apos;tax&apos;),LEN(Tax_Charge__c)&gt;0 )</errorConditionFormula>
    <errorDisplayField>Tax_Charge__c</errorDisplayField>
    <errorMessage>You Cannot Select Tax Charge for Tax</errorMessage>
</ValidationRule>