force-app/main/default/objects/Global_Charges__c/validationRules/Without_Selecting_Entering_in_ACNO.validationRule-meta.xml
<ValidationRule>
    <fullName>Without_Selecting_Entering_in_ACNO</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;&apos;) , NOT( ISBLANK(  ACNO__c  ) ) )</errorConditionFormula>
    <errorDisplayField>ACNO__c</errorDisplayField>
    <errorMessage>You cannn&apos;t enter in ACNO without selecting Posting to FA System Pick Value.</errorMessage>
</ValidationRule>