force-app/main/default/objects/Global_Charges__c/validationRules/Without_Selecting_Entering_in_CLC.validationRule-meta.xml
<ValidationRule>
    <fullName>Without_Selecting_Entering_in_CLC</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;&apos;) , NOT( ISBLANK( ACH__c  ) ) )</errorConditionFormula>
    <errorDisplayField>ACH__c</errorDisplayField>
    <errorMessage>You cannn&apos;t enter in ACH without selecting Posting to FA System Pick Value.</errorMessage>
</ValidationRule>