force-app/main/default/objects/Global_Charges__c/validationRules/Without_Selecting_Entering_in_PC.validationRule-meta.xml
<ValidationRule>
    <fullName>Without_Selecting_Entering_in_PC</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Posting_to_FA_system__c , &apos;&apos;) , NOT( ISBLANK( PC__c ) ) )</errorConditionFormula>
    <errorDisplayField>PC__c</errorDisplayField>
    <errorMessage>You cannn&apos;t enter in PC without selecting Posting to FA System Pick Value.</errorMessage>
</ValidationRule>