force-app/main/default/objects/Global_Charges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequence_No__c</columns>
    <columns>Code__c</columns>
    <columns>SAP_condition_type__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>SAP_Material_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>